[gd_scene format=3 uid="uid://b5gm6l0hqet3h"]

[ext_resource type="Script" uid="uid://cb5bif01u6yrh" path="res://scripts/ui/weapons_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://dwubil4canrne" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://c57xst3nepaot" path="res://assets/ui/weapons/Weapon_Backing.png" id="4"]

[node name="Weapons2" type="Control" unique_id=1439746426]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=889113573]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="Layout" type="MarginContainer" parent="." unique_id=1875896935]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 6.0
offset_right = -18.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Layout" unique_id=69663120]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Layout/VBox" unique_id=1592003126]
layout_mode = 2

[node name="BackButton" parent="Layout/VBox/Header" unique_id=198259928 instance=ExtResource("2")]
custom_minimum_size = Vector2(92, 34)
layout_mode = 2
text = "BACK"

[node name="Center" type="VBoxContainer" parent="Layout/VBox/Header" unique_id=2049173262]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="Layout/VBox/Header/Center" unique_id=713089158]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 36
text = "WEAPONS OVERLAY"
horizontal_alignment = 1

[node name="HeaderSpacer" type="Control" parent="Layout/VBox/Header" unique_id=604872692]
custom_minimum_size = Vector2(92, 34)
layout_mode = 2

[node name="OwnedSection" type="Panel" parent="Layout/VBox" unique_id=1355797234]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.72

[node name="OwnedMargin" type="MarginContainer" parent="Layout/VBox/OwnedSection" unique_id=638280085]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Split" type="HSplitContainer" parent="Layout/VBox/OwnedSection/OwnedMargin" unique_id=1035063868]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
split_offsets = PackedInt32Array(250)
dragging_enabled = false
dragger_visibility = 2
split_offset = 250

[node name="Left" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split" unique_id=1951256679]
layout_mode = 2
size_flags_vertical = 3

[node name="OwnedScroll" type="ScrollContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Left" unique_id=411553776]
layout_mode = 2
size_flags_vertical = 3

[node name="OwnedList" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Left/OwnedScroll" unique_id=1504881599]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Right" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split" unique_id=1697342562]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="SelectedTopSpacer1" type="Control" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right" unique_id=1477196892]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="RightSlotsSection" type="Panel" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right" unique_id=258309752]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection" unique_id=175733965]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotsScroll" type="ScrollContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin" unique_id=1527083910]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="SlotsRow" type="HBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll" unique_id=1076098508]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Slot1" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow" unique_id=188448840]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Backing" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot1" unique_id=1875413949]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot1/Backing" unique_id=175322743]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch_mode = 5

[node name="EquipButton" type="Button" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot1" unique_id=1410068781]
z_index = 10
custom_minimum_size = Vector2(96, 34)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 14
text = "EQUIP"

[node name="Slot2" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow" unique_id=1975144591]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Backing" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot2" unique_id=834070398]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot2/Backing" unique_id=926523418]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch_mode = 5

[node name="EquipButton" type="Button" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot2" unique_id=1755965425]
z_index = 10
custom_minimum_size = Vector2(96, 34)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 14
text = "EQUIP"

[node name="Slot3" type="VBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow" unique_id=1192436431]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="Backing" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot3" unique_id=1795807807]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot3/Backing" unique_id=707675539]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch_mode = 5

[node name="EquipButton" type="Button" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/RightSlotsSection/Margin/SlotsScroll/SlotsRow/Slot3" unique_id=1057827642]
z_index = 10
custom_minimum_size = Vector2(96, 34)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_hover_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 14
text = "EQUIP"

[node name="SelectedTopSpacer2" type="Control" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right" unique_id=146260338]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SelectedRow" type="HBoxContainer" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right" unique_id=1986022633]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectedTitle" type="Label" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/SelectedRow" unique_id=1632520223]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 24
text = "No Amulet Selected"
vertical_alignment = 1
autowrap_mode = 2

[node name="SelectedIcon" type="TextureRect" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right/SelectedRow" unique_id=1814406901]
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="Layout/VBox/OwnedSection/OwnedMargin/Split/Right" unique_id=1398880351]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = "Description"
autowrap_mode = 2
